# usct-benchlab

./: .env.example  .gitignore  AGENTS.md  CODEX_GOAL_PROMPT.md  LICENSE  README.md  README.zh-CN.md  environment.yml  pyproject.toml  requirements.txt
docs/: A100_SERVER_SETUP.md  ALGORITHM_SETTINGS_TROUBLESHOOTING.md  EVALUATION_ACCEPTANCE_PROTOCOL.md  EXTERNAL_SOURCES_AND_LICENSES.md  FWI_KWAVE_SUCCESS_NOTES.md  NBPSLICE2D_DATA_PROTOCOL.md  OPENBREASTUS_DATA_PROTOCOL.md  README.md  V0_1_READINESS_CHECKLIST.md  algorithm_taxonomy.md  algorithms.md  benchmark_report_template.md  datasets.md  development.md  fwi.md  math_formulation.md  references.bib  usage.md
examples/: README.md  synthetic_quickstart.sh
scripts/: audit_release.py  audit_v01_readiness.py  bootstrap_a100.sh  check_server.sh  render_class_comparison_panels.py  render_examples.py  render_kwave_fwi_smoke_outputs.py  render_readme_algorithm_comparison.py  run_demo_benchmarks.sh  run_external_matlab_adapter_quality.sh  run_external_matlab_adapter_smoke.sh  run_fwi_demo.sh  run_fwi_kwave_adapter_smoke.sh  run_fwi_kwave_full_pipeline_smoke.sh  run_nbpslice2d_quality.sh  run_nbpslice2d_smoke.sh  run_openbreastus_quality.sh  run_openbreastus_smoke.sh  run_smoke.sh  run_v01_release_check.sh  setup_workspace.sh
tests/: conftest.py  test_attenuation_synthetic.py  test_benchmark_runner.py  test_cli_run_artifacts.py  test_data_consistency.py  test_docs_inventory.py  test_features.py  test_fwi_gradient_check.py  test_fwi_kwave_adapter.py  test_fwi_loss_decrease.py  test_kwave_unified_wavefield.py  test_matlab_adapters.py  test_metrics.py  test_nbpslice2d_conversion.py  test_openbreastus_inspection.py  test_projector_adjoint.py  test_registry_cli.py  test_scripts.py  (+4 more)
(+171 files in other folders)
