[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usct-benchlab"
version = "0.1.0"
description = "Lightweight benchmark package for ultrasound computed tomography reconstruction algorithms."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "usct-benchlab contributors" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "h5py>=3.8",
  "pydantic>=2.0",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "scikit-image>=0.21",
  "pandas>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "black>=24.0"
]
viz = [
  "matplotlib>=3.7",
  "pillow>=10.0"
]
fwi = [
  "scipy>=1.10",
  "h5py>=3.8"
]

[project.scripts]
usct = "usctbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
